--- a/naver.css
+++ b/naver.css
@@ -1,11 +1,89 @@
 .header{
     display:flex;
+    flex-direction:column;    
+}
+.search_box{
+    display:flex;
     flex-direction:column;
-    align-items:center;
+}
+.search_box #left_element,
+.search_box #right_element{
+    display:flex;
+    flex-direction:row;    
+}
+.search_box #left_element #shortcuts,
+.search_box #right_element #naver_talk {
+    padding-right:20px;
+}
+#search_form{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    justify-content: space-evenly;
 }
 .container{
-    display:flex;
+    display:flex;  
     justify-content:space-between;    
+    margin-left:10px;
+}
+.container .content {
+    width: 70%;
+}
+.container .aside {
+    width: 30%;
+    margin-left:20px;
+}
+.container .content .top .news{
+    display:flex;
+    flex-direction:column;
+}
+
+.container .content .top .news #header_view{
+    display:flex;    
+    justify-content: space-between;
+    padding:10px;
+    /* align-items: center; */
+}
+#header_view #list ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding:0px;
+}
+#header_view #list li {
+    list-style-type: none;    
+    padding-left:10px;
+}
+#header_subview{
+    display: flex;
+    flex-direction: row;
+    padding:10px;
+    margin-left:10px;
+    margin-right:10px;
+}
+#header_subview #sub_news{
+    width: 60%;
+    margin: 0 auto;
+}
+#paging_view {
+    position: relative;
+    display: flex;
+    flex-direction: row;    
+}
+#paging_view #page_lt_rt {
+    display:flex;
+    flex-direction: row;
+    padding-left:40%;
+}
+#paging_view #btn {
+    display: flex;
+    flex-direction: row;    
+    position: absolute;
+    right: 0;    
+}
+#btn #btn_list ,
+#btn #btn_thumb{
+    margin-left:10px;
 }
 .footer{
     display:flex;
