--- a/naver.css
+++ b/naver.css
@@ -3,6 +3,7 @@
     flex-direction:column;  
     background-color: white;
     height: 30%;
+    margin-top:25px;
     margin-left: 15%;
     margin-right: 15%;
 }
@@ -33,8 +34,8 @@
 }
 #search_form{
     display:flex;
+    position: relative;
     flex-direction:row;
-    justify-content: center;
     justify-content: space-evenly;
     border:2px solid green;
     border-radius: 20px;
@@ -42,18 +43,42 @@
     width:40%;
     height: 50px;
 }
+#search_form #input_form{
+    width: 100%;
+}
 #search_form #input_form #input{
     border-width: 0px;
     outline:white;
     margin-top:5px;
     height:80%;
-    width: 200px;
+    width: 70%;
+    margin-left:80px;
     font-size: 20px;
 }
+#search_form #naver_icon{
+    position: absolute;    
+    top: 1px;
+    left: 15px;
+    
+}
+#search_form #keyboard_img{
+    position: absolute;
+    top: 1px;
+    right: 30px;
+}
+#search_form #reading_glass {
+    position: absolute;
+    top: 1px;
+    right: 15px;
+}
+
 .advertisement{
-    width:100%;
+    width:70%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 .advertisement #c_adv_img{
+    height: 150px;
     width:100%;
 }
 .container{
@@ -127,6 +152,10 @@
     flex-direction: row;
     padding-left:40%;
 }
+#paging_view #page {
+    font-size:15px;
+    font-weight: bold;
+}
 #paging_view #btn {
     display: flex;
     flex-direction: row;
@@ -154,20 +183,25 @@
 .login #login_comment{
     display:flex;
     justify-content: center;
+    font-size:15px;
 }
 .login_main {
     display:flex;
     margin-top: 10px;;
     margin-bottom: 10px;
     justify-content: space-evenly;
+    font-size: 13px;
 }
 
-.login_adv #login_adv_size{
-    object-fit: cover;
+.login_adv{
+    display: inline-block;
+    width: auto;
+    height: auto;
+    padding:10px;
 }
 .login_adv #login_adv_img{
-    padding: 10px;
-    width:100%;
+    width: 100%;
+    height: 100%;
 }
 .footer{
     display:flex;
