--- a/naver.css
+++ b/naver.css
@@ -245,7 +245,7 @@ a {
     text-align: center;
     padding: 5px 0;
 }
-/* 이전 달 날짜 스타일 */
+ /* 이전 달 날짜 스타일 */
 .calendar .days .day.before-month {
     color: rgb(214, 101, 101);
 }
@@ -276,7 +276,7 @@ a {
 /* 메모 헤더 */
 .memo_title {
     padding: 10px;
-    background-color: #17b75e;
+    background-color: #17B75E;
     color: white;
     font-weight: bold;
 }
@@ -287,10 +287,7 @@ a {
 }
 /* 영어사전 위젯 컨테이너*/
 .widget_dictionary {
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+    width: 340px;
     display: flex;
     justify-content: space-between;
 }
@@ -302,10 +299,10 @@ a {
     display: flex;
     justify-content: space-between;
 }
-/**/
+/* 위젯보드 바이브 부분 */
 .widget_vibe {
     width: 300px;
-    height: 250px;
+    height: 220px;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
@@ -314,10 +311,27 @@ a {
     display: flex;
     justify-content: space-around;
     margin-left: 15px;
+    font-size: 13px;
 }
 .widget_vibe .img1 .img2 .img3 {
     display: flex;
     flex-direction: column;
+}
+/* 위젯보드 광고 부분 */
+.widget_ad {
+    width: 300px;
+    height: 50px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+/* 위젯보드 웨일 이미지 조정 */
+.side_whaleimg {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
 }
 
 /*jy*/
