--- a/naver.css
+++ b/naver.css
@@ -13,7 +13,7 @@ a {
 .search_box {
     display: flex;
     flex-direction: column;
-    height: 150px;
+    height: 130px;
 }
 .search_box #left_element,
 .search_box #right_element {
@@ -245,7 +245,7 @@ a {
     text-align: center;
     padding: 5px 0;
 }
- /* 이전 달 날짜 스타일 */
+/* 이전 달 날짜 스타일 */
 .calendar .days .day.before-month {
     color: rgb(214, 101, 101);
 }
@@ -276,7 +276,7 @@ a {
 /* 메모 헤더 */
 .memo_title {
     padding: 10px;
-    background-color: #17B75E;
+    background-color: #17b75e;
     color: white;
     font-weight: bold;
 }
@@ -379,11 +379,24 @@ a {
     padding: 0;
 }
 .tag {
-    border: 2px solid black;
+    border: 2px solid rgb(235, 235, 235);
     box-sizing: border-box;
     border-radius: 15px;
     background-color: white;
     padding: 5px;
+}
+
+.tag:hover {
+    background-color: rgb(241, 241, 241);
+}
+.main_boottom_title:hover {
+    text-decoration: underline;
+}
+.subs_home:hover {
+    text-decoration: underline;
+}
+.article p:hover {
+    text-decoration: underline;
 }
 /*jy*/
 
@@ -399,7 +412,7 @@ hr {
 .shopping {
     display: flex;
     flex-direction: column;
-    margin-top: 16px;
+    margin: 16px 0px;
     border: 1px solid rgb(218, 218, 218);
     border-radius: 10px;
     width: 100%;
@@ -486,7 +499,7 @@ hr {
     height: 20%;
     display: flex;
     justify-content: space-around;
-    margin-top: 23px;
+    margin-top: 21px;
     padding: 10px 0px;
     border: 1px solid rgb(218, 218, 218);
     border-radius: 5px;
@@ -506,22 +519,16 @@ hr {
 }
 .shopping > div.s-content > div.sc-left > div.sl-third {
     height: 50%;
-    margin-top: 19px;
-    margin-left: 10px;
+    margin-top: 21px;
 }
 .shopping > div.s-content > div.sc-left > div.sl-third > img {
-    width: 91%;
-    padding-left: 8px;
+    width: 100%;
 }
 div.s-content > div.sc-right {
     display: flex;
     flex-direction: column;
     width: 70%;
     margin-right: 15px;
-}
-div.s-content > div.sc-right > div > img {
-    width: 100%;
-    padding-right: 10px;
 }
 div.s-footer {
     display: flex;
@@ -558,9 +565,9 @@ div.weather {
     flex-direction: column;
     border: 1px solid rgb(218, 218, 218);
     border-radius: 5px;
-    margin-top: 19px;
-    margin-left: 8px;
-    width: 90%;
+    margin-top: 10px;
+    margin-left: 9px;
+    width: 92%;
     padding: 0px 5px;
 }
 div.weather > div.w-top {
@@ -598,7 +605,7 @@ div.stock {
     border: 1px solid rgb(218, 218, 218);
     border-radius: 5px;
     margin: 19px 0px 19px 8px;
-    width: 90%;
+    width: 92%;
     padding: 0px 5px;
 }
 div.stock > div.st-top {
@@ -623,10 +630,63 @@ div.adver {
     border: 1px solid rgb(218, 218, 218);
     border-radius: 5px;
     margin: 19px 0px 19px 8px;
-    width: 90%;
+    width: 92%;
     padding: 0px 5px;
 }
 div.adver > img {
     width: 100%;
+}
+.shopping > div.s-content > div.sc-left > div.sl-second > div > i{
+    background-color: white;
+    border-radius: 50px;
+    padding: 7px;
+}
+div.sc-right > div > ul{
+    display: flex;
+    padding: 0px;
+    justify-content: space-between;
+    margin: 1px 5px 0px 0px;
+    list-style: none;
+}
+div.sc-right > div > ul >li{
+    font-size: 14px;
+}
+div.sc-right > div.scr-bottom >ul.down >li{
+    padding-top: 11px;
+}
+div.sc-right > div > ul > li > img:hover{
+    transform: scale(1.05);
+}
+div.icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0px auto 50px auto;
+    width: 70%;
+}
+div.icons > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+}
+div.icons > div > i{
+    border: 1px solid rgb(209, 209, 209);
+    border-radius: 10px;
+    padding: 10px;
+    color: #02be53;
+}
+div.icons > div > span{
+    font-size: 12px;
+    margin-top: 5px;
+}
+div.icons > div > i.fa-bag-shopping{
+    color: #08b2eb
+}
+div.icons > div > i.fa-newspaper{
+    color: #5a91fe;
+}
+div.icons > div > i.fa-ellipsis{
+    color: #9dacbe;
 }
 /* hb end */
